--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,7 +5,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.fstyle.kotlinsample.MainActivity"
+    tools:context="com.fstyle.kotlinsample.activities.MainActivity"
     >
 
     <TextView
@@ -17,6 +17,12 @@
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent"
+        />
+
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/list_forecast"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
         />
 
 </android.support.constraint.ConstraintLayout>
